--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 !/log/.keep
 !/tmp/.keep
 
+# Ignore node_modules
+/node_modules/*
+
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
