--- a/test/fixtures/relationships.yml
+++ b/test/fixtures/relationships.yml
@@ -2,8 +2,16 @@
 
 one:
   follower_id: 1
-  followed_id: 1
+  followed_id: 3
 
 two:
   follower_id: 1
+  followed_id: 4
+
+three:
+  follower_id: 3
+  followed_id: 1
+
+four:
+  follower_id: 2
   followed_id: 1
